[gd_scene load_steps=22 format=3 uid="uid://chfq7u8brt5jy"]

[ext_resource type="Script" path="res://main/game.gd" id="1_a6xjo"]
[ext_resource type="Texture2D" uid="uid://3xo2scl20lnf" path="res://assets/ui/banana_bg.png" id="2_3kupl"]
[ext_resource type="Texture2D" uid="uid://blom1m8idbvos" path="res://assets/ui/banana_logo.png" id="2_uavgk"]
[ext_resource type="Script" path="res://ui/bar_graph.gd" id="3_ctc7k"]
[ext_resource type="Texture2D" uid="uid://5gn0cquoy1ek" path="res://assets/ui/power_logo.png" id="3_vm7rl"]
[ext_resource type="Texture2D" uid="uid://dyj1uybkuaxvy" path="res://assets/ui/icons/banana_icon.png" id="4_t413w"]
[ext_resource type="Texture2D" uid="uid://cxgfy1pk2qnxl" path="res://assets/ui/icons/check_icon.png" id="5_w6egs"]
[ext_resource type="Texture2D" uid="uid://cmhwksjnucue8" path="res://assets/ui/icons/x_icon.png" id="6_scer8"]
[ext_resource type="Texture2D" uid="uid://yt7uh21feayl" path="res://assets/pictures/shoes.jpg" id="9_4wq12"]

[sub_resource type="Gradient" id="Gradient_d85hs"]
offsets = PackedFloat32Array(0.729508, 1)
colors = PackedColorArray(0.980392, 0.886275, 0.309804, 1, 0.756081, 0.670883, 0.0789213, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5rwse"]
gradient = SubResource("Gradient_d85hs")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fosuv"]
texture = SubResource("GradientTexture2D_5rwse")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p71f1"]
bg_color = Color(1, 0.992157, 0.764706, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ggkvo"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jd67s"]
bg_color = Color(0.960784, 0.94902, 0.94902, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.839216, 0.615686, 0.513726, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yudxl"]
bg_color = Color(0.921569, 0.792157, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqgly"]
bg_color = Color(0.258824, 0.607843, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cojv1"]
bg_color = Color(0.658824, 0.0470588, 0.0470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhasl"]
bg_color = Color(0.372549, 0.372549, 0.372549, 1)

[sub_resource type="Animation" id="Animation_x1gsk"]
resource_name = "show_score"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ScoreText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 2.82843, 1),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 200), Vector2(0, 224)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ScoreText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ysdx"]
_data = {
"show_score": SubResource("Animation_x1gsk")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a6xjo")

[node name="GamePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_fosuv")

[node name="VBoxContainer" type="VBoxContainer" parent="GamePanel"]
layout_mode = 2

[node name="TopBar" type="PanelContainer" parent="GamePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p71f1")

[node name="HBoxContainer" type="HBoxContainer" parent="GamePanel/VBoxContainer/TopBar"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_ggkvo")

[node name="TextureRect" type="TextureRect" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_uavgk")
expand_mode = 2

[node name="Label" type="Label" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "   File       Edit       View       Help"

[node name="Time" type="Label" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "5:33 PM "
horizontal_alignment = 2

[node name="VSeparator4" type="VSeparator" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_ggkvo")

[node name="TextureRect2" type="TextureRect" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_vm7rl")
expand_mode = 2

[node name="VSeparator5" type="VSeparator" parent="GamePanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_ggkvo")

[node name="MarginContainer" type="MarginContainer" parent="GamePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SideBar" type="VBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="BananaBG" type="TextureRect" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_3kupl")
expand_mode = 1
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar"]
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jd67s")

[node name="BarGraph" type="VBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_ctc7k")

[node name="Perfect" type="HBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Perfect"]
layout_mode = 2
texture = ExtResource("4_t413w")
expand_mode = 2

[node name="Bar" type="Panel" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Perfect"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yudxl")

[node name="Count" type="Label" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Perfect"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2

[node name="Good" type="HBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Good"]
layout_mode = 2
texture = ExtResource("5_w6egs")
expand_mode = 2

[node name="Bar" type="Panel" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Good"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kqgly")

[node name="Count" type="Label" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Good"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2

[node name="Bad" type="HBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Bad"]
layout_mode = 2
texture = ExtResource("6_scer8")
expand_mode = 2

[node name="Bar" type="Panel" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Bad"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cojv1")

[node name="Count" type="Label" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SideBar/PanelContainer/BarGraph/Bad"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2

[node name="PicturePanel" type="PanelContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mhasl")

[node name="MarginContainer" type="MarginContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PicturePanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PictureRect" type="TextureRect" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PicturePanel/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_4wq12")
expand_mode = 1
stretch_mode = 5

[node name="BottomBar" type="HBoxContainer" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="Button" type="Button" parent="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Banana Scaled!!"

[node name="Dialogue" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ysdx")
}

[node name="ScoreText" type="Label" parent="AnimationPlayer"]
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 772.0
theme_override_font_sizes/font_size = 90
text = "PERFECT"
horizontal_alignment = 1

[connection signal="button_up" from="GamePanel/VBoxContainer/MarginContainer/VBoxContainer/BottomBar/Button" to="." method="_on_button_button_up"]
